Fix visibility bug on first load

--- a/main.css
+++ b/main.css
@@ -39,5 +39,6 @@ h3 {
 }
 .facts {
     opacity: 0;
+    visibility: hidden;
     transition: opacity 1.5s ease-in-out;
 }
